Bug 466600 - Shown volumes change at reboot
Summary: Shown volumes change at reboot
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 21.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-28 14:39 UTC by Luigi Baldoni
Modified: 2023-11-29 07:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Baldoni 2023-02-28 14:39:18 UTC
SUMMARY
***
I hide some volumes in the left panel of dolphin. Sometimes after a reboot different ones appear.
***


STEPS TO REPRODUCE
1.  Have two sata disks
2.  Hide some of the volumes in the folder pane to the left
3.  Reboot and check if they're still the same

OBSERVED RESULT
Sometimes shown volumes are different

EXPECTED RESULT
Should not change between reboots

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.4
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I surmise that dolphin relies on what udisks2 provides and sometimes /dev/sda and /dev/sdb are swapped.
Consequently /dev/sda1 and /dev/sdb1 are swapped as well.

Is there anything that can be done to avoid this problem, configuration-wise?
Comment 1 Méven Car 2023-04-05 14:22:34 UTC
Well that's a bug in our implementation we use the udi as unique identifier but by solid documentation this isn't stable accross reboots.
This is going to need some fixing.
Solid (our hardware recognition library) does not provide stable ids.

Drives may still be disguinshed by their UUID but that's going to need some refactoring possibly causing data loss due to user-places.xbel entries becoming obsolete.

There are no possible workaround at the moment.
Comment 2 Méven Car 2023-04-22 08:09:59 UTC
Git commit 80c44d3744a96e1117d9fccd4db1c3e6ec74d4b9 by Méven Car, on behalf of Méven Car.
Committed on 22/04/2023 at 07:46.
Pushed by meven into branch 'master'.

KFilePlaceModel: use storageVolume uuid to match their bookmark

 * When a device is a storageVolume store its uuid in its metadata
 * Use the uuid to match against the bookmarks

M  +1    -0    autotests/fakecomputer.xml
M  +13   -4    src/filewidgets/kfileplacesitem.cpp
M  +1    -1    src/filewidgets/kfileplacesitem_p.h
M  +21   -15   src/filewidgets/kfileplacesmodel.cpp

https://invent.kde.org/frameworks/kio/commit/80c44d3744a96e1117d9fccd4db1c3e6ec74d4b9
Comment 3 Bug Janitor Service 2023-11-29 07:05:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1495