KFilePlaceModel: use storageVolume uuid to match their bookmark

* When a device is a storageVolume store its uuid in its metadata
 * Use the uuid to match against the bookmarks

BUG: 466600